[project]
name = "app-forms"
version = "0.1.0"
description = "this is a aplication to crated forms, register answers and cration and validation of user"
authors = [
    {name = "Daniel Perez and Jaider Avila"}
]
license = {text = "GNU/GPL"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
